// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given FavouritesToolTip Given CloseButton should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  cursor: pointer;
  padding: 0;
  height: 0.75rem;
  width: 0.75rem;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given FavouritesToolTip Given Container should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  padding: 1rem;
  min-width: 18rem;
  border: 0.0625rem solid #9e9e9e;
  background: #fff;
  border-radius: 0.25rem;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.4);
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given FavouritesToolTip Given Content should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 0.875rem;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given FavouritesToolTip Given Header should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 1rem;
  font-family: "AzoSansRegular","Helvetica Neue",Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given FavouritesToolTip Given Link should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  color: #257f39;
}

<a
    class="c0"
    href="https://www.amido.com"
  />
</DocumentFragment>
`;

exports[`Given FavouritesToolTip Given Title should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 0.938rem;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given FavouritesToolTip Given UserSection should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 0.2rem;
}

<p
    class="c0"
  />
</DocumentFragment>
`;
